--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     </head>
     <body>
         <div id="root"></div>
-        <script type="module" src="/src/main.tsx">
-            window.setImmediate = window.setTimeout;
-        </script>
+        <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
